--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-router": "^2.0.1",
     "redux": "^3.0.4",
     "redux-promise": "^0.5.3",
+    "uniqid": "^4.1.1",
     "webpack": "^1.12.9"
   }
 }
